@@ -628,9 +628,12 @@ void Runtime::optionsBox(StringList *items) {
     _menuY = 2;
   }
 
+  int backScreenId = _output->getScreenId(true);
+  int frontScreenId = _output->getScreenId(false);
+  _output->selectBackScreen(MENU_SCREEN);
+
   int width = 0;
   int charWidth = _output->getCharWidth();
-  _output->registerScreen(MENU_SCREEN);
   List_each(String *, it, *items) {
     char *str = (char *)(* it)->c_str();
     int w = (strlen(str) * charWidth);
@@ -650,11 +653,12 @@ void Runtime::optionsBox(StringList *items) {
     _menuY = _output->getHeight() - height;
   }
 
-  int screenId = _output->insetMenuScreen(_menuX, _menuY, width, height);
   int y = 0;
   int index = 0;
   int selectedIndex = -1;
   int releaseCount = 0;
+
+  _output->insetMenuScreen(_menuX, _menuY, width, height);
 
   List_each(String *, it, *items) {
     char *str = (char *)(* it)->c_str();
@@ -679,7 +683,8 @@ void Runtime::optionsBox(StringList *items) {
   }
 
   _output->removeInputs();
-  _output->selectScreen(screenId);
+  _output->selectBackScreen(backScreenId);
+  _output->selectFrontScreen(frontScreenId);
   _menuX = 2;
   _menuY = 2;
   if (selectedIndex != -1) {
