@@ -1,3 +1,6 @@
+2016-07-30 (0.12.7)
+	Fixed screen switching when program screen has different font size
+
 2016-07-16 (0.12.7)
 	Fixed editor display issue with escaped quotes
 
